# sys_py_config_manager

./: .gitignore  LICENSE  PROJECT_EVALUATION.md  README.md  pyproject.toml
docs/: api_reference.md  examples.md
src/config_manager/: __init__.py  core.py  loaders.py  types.py  validators.py
